# auto_stock_trading

./: api.py  connection_diagnostic.py  kis_open_api.py  main.py  pyproject.toml  readme.md  simple_connection_test.py  strategy.py
