[project]
name = "auto-stock-trading"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pandas-stubs==2.2.3.250527",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "types-urllib3==1.26.25.14",
]
